--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-i18next": "^9.0.7",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.0.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
