--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-i18next": "^9.0.7",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1",
     "webfontloader": "^1.6.28"
   },
