--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flags-select": "^1.1.10",
     "react-i18next": "^9.0.7",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1",
